--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input":"node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": []
@@ -89,6 +92,7 @@
               "src/assets"
             ],
             "styles": [
+              
               "src/styles.css"
             ],
             "scripts": []
